# nativeui-plugins

./: README.md  codex-bootstrap.sh
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
nativeui-codex/: AGENTS.md  README.md  build-codex-plugin.mjs  generate-capability-catalog.mjs  install.sh
nativeui-codex/canonical/nativeui-developer/: SKILL.md
nativeui-plugin/: DOGFOOD.md  README.md  package.json
nativeui-plugin/.claude-plugin/: plugin.json
nativeui-plugin/capabilities/: nativeui-agent-capabilities.json  nativeui-capability-catalog.json  nativeui-targets.json
nativeui-plugin/skills/nativeui-backend/templates/python-fastapi/: README.md  main.py  pyproject.toml
nativeui-plugin/test/: agent-artifacts.test.mjs  backend-plan.test.mjs  capabilities-registry.test.mjs  codex-parity.test.mjs  codex-plugin-package.test.mjs  config.test.mjs  connectors-plan-rust.test.mjs  connectors-plan-web.test.mjs  connectors-plan.test.mjs  design-contract.test.mjs  export-auth-mode.test.mjs  export-rust.test.mjs  export-write-once.test.mjs  fail-closed.test.mjs  final-review.test.mjs  flow-audit.test.mjs  full-target-support.test.mjs  helpers.mjs  intake.test.mjs  library.test.mjs  no-local-firebase-auth.test.mjs  node-check.test.mjs  platform-guidance.test.mjs  preview.test.mjs  project-sync.test.mjs  responsive-audit.test.mjs  run-rust.test.mjs  run.mjs  skill-inventory.test.mjs  skill-schema.test.mjs  test-gen-rust.test.mjs  test-gen-web.test.mjs  test-gen.test.mjs  token.test.mjs  validate.test.mjs  web-cli-ownership.test.mjs
(+112 files in other folders)
